# MemoryAsAService

./: .gitignore  BUILD_AND_DEPLOY.md  BUILD_COMPLETE_SUMMARY.md  MaaS_Report[1][2].docx  TESTING_GUIDE.md  burst_allocate.sh  context.json  document.xml  env.sh  extract_text.py  live_allocate.sh  monitor_maas.sh  prometheus.yml  run_maas.sh  run_node_exporter.sh  run_prometheus.sh  simulate_client.sh  start_clean_demo.sh  start_demo.sh  test_maas_integration.sh  verify_integration.sh  verify_maas_integration.sh
data/01KGMDSV8ESEWNGKPPV54C1T4S/: index  meta.json
data/01KGMDSV8ESEWNGKPPV54C1T4S/chunks/: 000001
data/01KGMDSV9Q46G89G8W1BEGS58Q/: index  meta.json
data/01KGMDSV9Q46G89G8W1BEGS58Q/chunks/: 000001
data/chunks_head/: 000001
data/wal/: 00000000  00000008  00000009  00000010
data/wal/checkpoint.00000007/: 00000000
maas-backend/: .env.example  .gitignore  Cargo.toml  MIGRATION.md  README.md  config.toml  demo_v2.sh  verify.sh  verify_v2.sh
maas-backend/src/: config.rs  handlers.rs  main.rs  models.rs  slab.rs  state.rs
prometheus/cmd/prometheus/: main.go
prometheus/tsdb/: db.go  head.go
prometheus/tsdb/chunkenc/: float_histogram.go  histogram.go  maas_integration.go  xor.go
prometheus/tsdb/maas/: allocator.go  client.go  pool.go
prometheus/web/ui/: package-lock.json
